# Scarab-infra

./: README.ISCA.md  README.LitzLab.md  README.md  apps.list  build_apps.sh  build_image.sh  desc.json  exp.json  exp2.json  frontier.json  gather_cluster_results.py  gather_fp_pieces.py  generate_exp_descriptor.py  minimize_trace.sh  params.new  params.scarab  plot_data.py  plot_warmup.py  pystats.md  quick_start_guide.ipynb  quickstart_env.yaml  run.sh  run_clustering.sh  run_exp_using_descriptor.py  run_no_simpoint.sh  run_scarab.sh  run_scarab_allbench.sh  run_scarab_mode_4.sh  run_scarab_mode_4_allbench.sh  run_simpoint.sh  run_simpoint_trace.sh  run_single_simpoint.sh  run_slurm.py  run_trace_post_processing.sh  scarab_stats.py  scarab_stats_quick_start.ipynb  serve_jupyter.sh  setup_apps.sh  slurm_exp.json  slurm_get_log.py  (+3 more)
DaCapo/: Dockerfile
Fleetbench/: Dockerfile  instructions.txt
OSS/: Dockerfile
Renaissance/: Dockerfile
SPEC2017/: Dockerfile
Verilator/: Dockerfile
allbench_traces/: Dockerfile
common/: Dockerfile.common  Dockerfile.oss  Dockerfile.scarab  Dockerfile.tailbench  common_entrypoint.sh
cse220/: Dockerfile  README.md  entrypoint.sh  lab1.json  run_cse220.sh  run_exp_using_descriptor.py
dacapo/: Dockerfile
dcperf/: Dockerfile
docker_traces/: Dockerfile  desc.json  desc.pt.json
docs/: README.ISCA.md  README.Slurm.LitzLab.md  README.Slurm.md  README.perf.md  README.trace.md
dss/: Dockerfile
dss_and_http/: Dockerfile.scarab  dss_and_http_note.txt  trace_dss.sh  trace_httpd.sh
fingerprint_src/: CMakeLists.txt  fpg.cpp
(+137 files in other folders)
